--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "mapbox-gl": "^0.50.0-beta.1",
+    "mapbox-gl-vue": "^1.9.0",
     "nuxt": "^1.0.0",
     "vuetify": "^1.0.0"
   },
