--- a/package.json
+++ b/package.json
@@ -30,5 +30,9 @@
     "sass-loader": "^7.0.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2"
+  },
+  "engines": {
+    "node": "^10.0.0",
+    "npm": "^6.0.0"
   }
 }
