--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "aws-amplify": "^1.1.19",
+    "npm": "^6.7.0",
     "nuxt": "^1.0.0",
     "vuetify": "^1.0.0"
   },
