ぷち調整

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "papamama2",
+  "name": "pamasapo",
   "version": "1.0.0",
   "description": "next papamama project",
   "author": "Code For Chiba",
