--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "mapbox-gl-vue": "1.9.0",
     "nuxt": "2.8.1",
     "serialize-error": "4.1.0",
-    "vuetify": "2.0.5"
+    "vuetify": "2.0.5",
+    "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
     "babel-eslint": "10.0.2",
