--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
+    "@nuxtjs/vuetify": "^1.2.1",
     "babel-eslint": "10.0.2",
     "eslint": "6.1.0",
     "eslint-friendly-formatter": "4.0.1",
@@ -33,10 +34,8 @@
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-standard": "4.0.0",
     "eslint-plugin-vue": "5.2.3",
-    "node-sass": "4.12.0",
-    "sass-loader": "7.2.0",
-    "stylus": "0.54.5",
-    "stylus-loader": "3.0.2"
+    "sass": "^1.22.9",
+    "sass-loader": "7.2.0"
   },
   "engines": {
     "node": "^10.0.0",
